[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/godot_sprite_shader/src/sshader/SSDissolveDust.gd" type="Script" id=1]
[ext_resource path="res://demo/objects/back_ground.tscn" type="PackedScene" id=2]
[ext_resource path="res://demo/objects/char_viewport.tscn" type="PackedScene" id=3]
[ext_resource path="res://demo/list_demo/shaders/dissolve/demo.gd" type="Script" id=4]
[ext_resource path="res://demo/assets/font/LilitaOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://addons/godot_sprite_shader/src/sshader/SSDissolveBurn.gd" type="Script" id=6]
[ext_resource path="res://addons/godot_sprite_shader/src/sshader/SSDissolveFlash.gd" type="Script" id=7]
[ext_resource path="res://addons/godot_sprite_shader/src/core/SShaderContainer.gd" type="Script" id=8]
[ext_resource path="res://addons/godot_sprite_shader/src/sshader/SSDissolveTwist.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="demo" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" parent="." instance=ExtResource( 2 )]

[node name="Char" parent="." instance=ExtResource( 3 )]
position = Vector2( 134, 415 )

[node name="Char2" parent="." instance=ExtResource( 3 )]
position = Vector2( 330, 411 )
title = "Dissolve Dust"

[node name="Label" parent="Char2" index="0"]
text = "Dissolve Dust"

[node name="SShaderContainer" type="Node" parent="Char2"]
script = ExtResource( 8 )
node_path = NodePath("../ViewportContainer")

[node name="SSDissolveDust" type="Node" parent="Char2/SShaderContainer"]
script = ExtResource( 1 )
offset_y = -0.133
dust_size = 256.0

[node name="Char3" parent="." instance=ExtResource( 3 )]
position = Vector2( 507, 411 )
title = "Dissolve Burn"

[node name="Label" parent="Char3" index="0"]
text = "Dissolve Burn"

[node name="SShaderContainer" type="Node" parent="Char3"]
script = ExtResource( 8 )
node_path = NodePath("../ViewportContainer")

[node name="SSDissolveBurn" type="Node" parent="Char3/SShaderContainer"]
script = ExtResource( 6 )

[node name="Char4" parent="." instance=ExtResource( 3 )]
position = Vector2( 705, 413 )
title = "Dissolve Circle"

[node name="Label" parent="Char4" index="0"]
text = "Dissolve Flash"

[node name="SShaderContainer" type="Node" parent="Char4"]
script = ExtResource( 8 )
node_path = NodePath("../ViewportContainer")

[node name="SSDissolveFlash" type="Node" parent="Char4/SShaderContainer"]
script = ExtResource( 7 )

[node name="Char5" parent="." instance=ExtResource( 3 )]
position = Vector2( 900, 414 )
title = "Dissolve Twist"

[node name="Label" parent="Char5" index="0"]
text = "Dissolve Twist"

[node name="SShaderContainer" type="Node" parent="Char5"]
script = ExtResource( 8 )
node_path = NodePath("../ViewportContainer")

[node name="SSDissolveTwist" type="Node" parent="Char5/SShaderContainer"]
script = ExtResource( 9 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 250.0
margin_top = 175.0
margin_right = 779.0
margin_bottom = 215.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="InfoLabel" type="Label" parent="HBoxContainer"]
margin_top = 1.0
margin_right = 81.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Press "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLabel2" type="Label" parent="HBoxContainer"]
margin_left = 85.0
margin_top = 1.0
margin_right = 167.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.329412, 0.298039, 0.92549, 1 )
custom_fonts/font = SubResource( 1 )
text = "Space"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLabel3" type="Label" parent="HBoxContainer"]
margin_left = 171.0
margin_top = 1.0
margin_right = 426.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = " to start animation"
__meta__ = {
"_edit_use_anchors_": false
}

[editable path="Char2"]
[editable path="Char3"]
[editable path="Char4"]
[editable path="Char5"]
